ac-manifest/admissionconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  namespace: ac-workshop
  name: validating-webhook
webhooks:
  - name: validate.ac-workshop.svc
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 30
    admissionReviewVersions: ["v1","v1beta1"]
    namespaceSelector:
      matchExpressions:
      - key: ac-workshop.ignore
        operator: DoesNotExist    
    rules:
      - apiGroups: ["*"]
        resources:
          - "deployments"
        apiVersions:
          - "*"
        operations:
          - CREATE
          - UPDATE
    clientConfig:
      service:
        name: 
        namespace: 
        path: 
      caBundle:
